--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="index.html">Techie</a></h1>
+      <h1 class="logo"><a href="index.html">Comentor</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -83,7 +83,7 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Bettter Digital Experience With Techie</h1>
+          <h1>Learn Programming From Zero to Hero</h1>
           <h2>We are team of talented designers making websites with Bootstrap</h2>
           <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
         </div>
