--- a/public/index.html
+++ b/public/index.html
@@ -428,8 +428,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-php">
             <div id="pricing" class="pricing section-bg">
             <div class="box">
-              <h3> <i class="bx bxl-php"></i> Beginner</h3>
-              <h4><sup>Rp. </sup>2.000.000 -,<span> / 1 bulan</span></h4>
+              <h3> <i class="bx bxl-php"></i> Beginner <small>/ 1 bulan</small></h3>
+              <!-- <h4><sup>Rp. </sup>2.000.000 -,<span> / 1 bulan</span></h4> -->
+              <h4> </h4>
               <ul>
                 <li>HTML + CSS</li>
                 <li>PHP Fundamental</li>
@@ -454,8 +455,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-php">
             <div id="pricing" class="pricing section-bg">
             <div class="box featured">
-              <h3><i class="bx bxl-php"></i> Intermediate</h3>
-              <h4><sup>Rp. </sup>5.000.000 -,<span> / 3 bulan</span></h4>
+              <h3><i class="bx bxl-php"></i> Intermediate <small>/ 3 bulan</small></h3>
+              <!-- <h4><sup>Rp. </sup>5.000.000 -,<span> / 3 bulan</span></h4> -->
               <ul>
                 <li>HTML + CSS</li>
                 <li>PHP Fundamental</li>
@@ -482,8 +483,8 @@
             <div id="pricing" class="pricing section-bg">
             <div class="box ">
               <span class="advanced">premium</span>
-              <h3><i class="bx bxl-php"></i> Advanced</h3>
-              <h4><sup>Rp. </sup>15.000.000 -,<span> / 6 bulan</span></h4>
+              <h3><i class="bx bxl-php"></i> Advanced <small>/ 6 bulan</small></h3>
+              <!-- <h4><sup>Rp. </sup>15.000.000 -,<span> / 6 bulan</span></h4> -->
               <ul>
                 <li>HTML + CSS</li>
                 <li>PHP Fundamental</li>
@@ -509,8 +510,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-py">
             <div id="pricing" class="pricing section-bg">
               <div class="box">
-                <h3><i class="bx bxl-python"></i> Beginner</h3>
-                <h4><sup>Rp. </sup>3.500.000 -,<span> / 1 bulan</span></h4>
+                <h3><i class="bx bxl-python"></i> Beginner <small>/ 1 bulan</small></h3>
+                <!-- <h4><sup>Rp. </sup>3.500.000 -,<span> / 1 bulan</span></h4> -->
                 <ul>
                   <li>HTML + CSS</li>
                   <li>Python Fundamental</li>
@@ -535,8 +536,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-py">
             <div id="pricing" class="pricing section-bg">
               <div class="box featured">
-                <h3><i class="bx bxl-python"></i> Intermediate</h3>
-                <h4><sup>Rp. </sup>8.000.000 -,<span> / 3 bulan</span></h4>
+                <h3><i class="bx bxl-python"></i> Intermediate <small>/ 3 bulan</small></h3>
+                <!-- <h4><sup>Rp. </sup>8.000.000 -,<span> / 3 bulan</span></h4> -->
                 <ul>
                   <li>HTML + CSS</li>
                   <li>Python Fundamental</li>
@@ -562,8 +563,8 @@
             <div id="pricing" class="pricing section-bg">
             <div class="box ">
               <span class="advanced">premium</span>
-              <h3><i class="bx bxl-python"></i> Advanced</h3>
-              <h4><sup>Rp. </sup>18.000.000 -,<span> / 6 bulan</span></h4>
+              <h3><i class="bx bxl-python"></i> Advanced <small>/ 6 bulan</small></h3>
+              <!-- <h4><sup>Rp. </sup>18.000.000 -,<span> / 6 bulan</span></h4> -->
               <ul>
                 <li>HTML + CSS</li>
                   <li>Python Fundamental</li>
@@ -589,8 +590,22 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-flutter">
             <div id="pricing" class="pricing section-bg">
               <div class="box">
-                <h3><i class="bx bxl-flutter"></i> Beginner</h3>
-                <p><i class="text-primary text-center"><i class="bx bxs-alarm-exclamation"></i> Coming Soon...</i></p>
+                <h3><i class="bx bxl-flutter"></i> Beginner <small>/ 1 bulan</small></h3>
+                <!-- <p><i class="text-primary text-center"><i class="bx bxs-alarm-exclamation"></i> Coming Soon...</i></p> -->
+                <ul>
+                  <li>Dart Fundamental</li>
+                  <li>Flutter Framework</li>
+                  <li>Git</li>
+                  <li>Flutter Package</li>
+                  <li class="na">Structuring Flutter Apps</li>
+                  <li class="na">Firebase</li>
+                  <li class="na">Deploy App to Google Play</li>
+                  <li class="na">Web Socket</li>
+                  <li class="na">CI/CD</li>
+                </ul>
+                <div class="btn-wrap">
+                  <a  href="https://api.whatsapp.com/send/?phone=6281225533109&type=phone_number&app_absent=0" class="btn-buy">Contact us</a>
+                </div>
               </div>
             </div>
           </div>
@@ -598,8 +613,22 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-flutter">
             <div id="pricing" class="pricing section-bg">
               <div class="box featured">
-                <h3><i class="bx bxl-flutter"></i> Intermediate</h3>
-                <p><i class="text-primary text-center"><i class="bx bxs-alarm-exclamation"></i> Coming Soon...</i></p>
+                <h3><i class="bx bxl-flutter"></i> Intermediate <small>/ 3 bulan</small></h3>
+                <!-- <p><i class="text-primary text-center"><i class="bx bxs-alarm-exclamation"></i> Coming Soon...</i></p> -->
+                <ul>
+                  <li>Dart Fundamental</li>
+                  <li>Flutter Framework</li>
+                  <li>Git</li>
+                  <li>Flutter Package</li>
+                  <li>Structuring Flutter Apps</li>
+                  <li>Firebase</li>
+                  <li class="na">Deploy App to Google Play</li>
+                  <li class="na">Web Socket</li>
+                  <li class="na">CI/CD</li>
+                </ul>
+                <div class="btn-wrap">
+                  <a  href="https://api.whatsapp.com/send/?phone=6281225533109&type=phone_number&app_absent=0" class="btn-buy">Contact us</a>
+                </div>
               </div>
             </div>
           </div>
@@ -608,8 +637,22 @@
             <div id="pricing" class="pricing section-bg">
               <div class="box">
                 <span class="advanced">premium</span>
-                <h3><i class="bx bxl-flutter"></i> Advanced</h3>
-                <p><i class="text-primary text-center"><i class="bx bxs-alarm-exclamation"></i> Coming Soon...</i></p>
+                <h3><i class="bx bxl-flutter"></i> Advanced <small>/ 6 bulan</small></h3>
+                <!-- <p><i class="text-primary text-center"><i class="bx bxs-alarm-exclamation"></i> Coming Soon...</i></p> -->
+                <ul>
+                  <li>Dart Fundamental</li>
+                  <li>Flutter Framework</li>
+                  <li>Git</li>
+                  <li>Flutter Package</li>
+                  <li>Structuring Flutter Apps</li>
+                  <li>Firebase</li>
+                  <li>Deploy App to Google Play</li>
+                  <li>Web Socket</li>
+                  <li>CI/CD</li>
+                </ul>
+                <div class="btn-wrap">
+                  <a  href="https://api.whatsapp.com/send/?phone=6281225533109&type=phone_number&app_absent=0" class="btn-buy">Contact us</a>
+                </div>
               </div>
             </div>
           </div>
@@ -671,7 +714,6 @@
           </div>
 
         </div>
-
       </div>
     </section>
     <!-- endpricing -->
